[package]
name = "cli"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2.33.3"
solana-clap-utils = "1.6.9"
solana-cli-config = "1.6.9"
solana-client = "1.6.9"
solana-logger = "1.6.9"
solana-sdk = "1.6.9"
solana-program = "1.6.9"
everlend-lending = { path="../program", features = [ "no-entrypoint" ] }
spl-token = { version = "3.1", features = [ "no-entrypoint" ] }